Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/T8057794.out
T8057794.java:10:29: compiler.err.type.var.cant.be.deref
1 error
